tigergraph-server/3.6/user-access/vlac.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)[Next](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  *     * [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
      * [Internal Architecture](https://docs.tigergraph.com/tigergraph-server/3.6/intro/internal-architecture)
      * [Multigraph Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/multigraph-overview)
      * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.6/intro/transaction-and-acid)
      * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/continuous-availability-overview)
      * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.6/intro/comparison-of-editions)
      * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.6/intro/release-process)
  *     * Getting Started
      * [Get Started with Docker](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/docker)
      * Get Started with Cloud Images
        * [Get Started on AWS](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/aws)
        * [Get Started on Microsoft Azure](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/azure)
        * [Get Started on Google Cloud](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/gcp)
      * [Install TigerGraph on Linux](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/linux)
      * [Get Started with Virtual Box](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/virtual-box)
      * Learn GSQL
        * [GSQL 101](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/gsql-101/)
        * [Pattern Matching Tutorial](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/pattern-matching/)
  *     * Installation
      * [Hardware and Software Requirements](https://docs.tigergraph.com/tigergraph-server/3.6/installation/hw-and-sw-requirements)
      * [Installation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/install)
      * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.6/installation/upgrade)
      * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/uninstallation)
      * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.6/installation/license)
  *     * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/)
      * [Quickstart with EKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-eks)
      * [Quickstart with AKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-aks)
      * [Quickstart with GKE](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-gke)
      * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/)
        * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/installation)
        * [Cluster Operations](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/cluster-operations)
        * [Connecting to a Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/connect-to-cluster)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/uninstallation)
  *     * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/)
      * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/gsql-sessions)
      * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/using-a-remote-gsql-client)
  *     * [User Access Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/)
      * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/enabling-user-authentication)
      * [Managing Credentials](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/managing-credentials)
      * [Access Control Model in TigerGraph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)
      * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)
      * [User Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/user-management)
      * [ACL Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management)
      * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)
      * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/sso)
      * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/ldap)
  *     * High Availability
      * [High Availability Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-cluster)
      * [High Availability Support for GSQL Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-gsql-server)
      * [High Availability Support for Application Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-application-server)
      * [Compute-on-demand Elastic Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/ha/elastic-cluster)
      * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.6/ha/cluster-commands)
      * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.6/ha/remove-failed-node)
  *     * [Cluster Resizing](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/)
      * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/expand-a-cluster)
      * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/shrink-a-cluster)
      * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/repartition-a-cluster)
  *     * [Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/)
      * [Set Up Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/set-up-crr)
      * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.6/crr/fail-over)
      * [Troubleshooting for Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/troubleshooting)
      * [FAQ](https://docs.tigergraph.com/tigergraph-server/3.6/crr/faq)
  *     * [Database Definition](https://docs.tigergraph.com/tigergraph-server/3.6/data-definition/README)
  *     * [Data Loading](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/)
      * [AWS S3 Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/s3-loader-user-guide)
      * [Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/)
        * [Data Loading with Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/load-data)
        * [Kafka Data Source Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-data-source)
        * [Kafka Loader Loading Job Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-loading-jobs)
        * [SSL/SASL Authentication for Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/kafka-ssl-sasl)
      * [Spark Connection Via JDBC Driver](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/spark-connection-via-jdbc-driver)
      * [Data Streaming Connector](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/data-streaming-connector)
  *     * [Querying](https://docs.tigergraph.com/tigergraph-server/3.6/data-querying/README)
  *     * [System Management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-with-gadmin)
      * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/memory-management)
      * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/manage-services)
      * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-commands)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.6/security/)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.6/security/file-output-policy)
  *     * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.6/import-export/database-import-export)
  *     * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.6/backup-and-restore/)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.6/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.6/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.6/API/json-catalog)
  *     * Troubleshooting
      * [Knowledge base and FAQs](https://kb.tigergraph.com/)
      * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/system-administration-faqs)
      * [Log files](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/log-files)
        * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/elk-filebeat)
      * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/troubleshooting-guide)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.6/release-notes/)
  *     * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.6/legal/patents-and-third-party-software)
  *     * References
      * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.6/reference/configuration-parameters)
      * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)
      * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/reference/list-of-privileges)
      * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.6/reference/ports)
      * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/reference/glossary)


TigerGraph DB 3.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph Server 3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [User Access Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/)
  * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.6/modules/user-access/pages/vlac.adoc)
### Contents
  * [Prerequisites](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_prerequisites)
  * [Workflow - Using Vertex Level Access Control](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_workflow_using_vertex_level_access_control)
  * [1. Create a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_1_create_a_tag_based_graph)
  * [2. Manage users of the tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_2_manage_users_of_the_tag_based_graph)
  * [3. Load and tag data](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_3_load_and_tag_data)
  * [4. Query and update Data](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_4_query_and_update_data)
  * [Tag Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_tag_management)
  * [Define a tag](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_define_a_tag)
  * [List tags](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_list_tags)
  * [Drop a tag](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_drop_a_tag)
  * [Create a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph)
  * [Mark vertex types as taggable](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_mark_vertex_types_as_taggable)
  * [Create a Tag-Based Graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph_2)
  * [How To Tag Vertices](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_how_to_tag_vertices)
  * [Add tags on existing data](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_add_tags_on_existing_data)
  * [Set tags explicitly with TAGS clause](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_explicitly_with_tags_clause)
  * [Set tags implicitly by inserting into a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_implicitly_by_inserting_into_a_tag_based_graph)
  * [Query a Tag-based Graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_query_a_tag_based_graph)
  * [Access Control](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_access_control)
  * [Sample Use Cases](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_sample_use_cases)


# Vertex-Level Access Control (Deprecated)
### Contents
  * [Prerequisites](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_prerequisites)
  * [Workflow - Using Vertex Level Access Control](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_workflow_using_vertex_level_access_control)
  * [1. Create a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_1_create_a_tag_based_graph)
  * [2. Manage users of the tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_2_manage_users_of_the_tag_based_graph)
  * [3. Load and tag data](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_3_load_and_tag_data)
  * [4. Query and update Data](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_4_query_and_update_data)
  * [Tag Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_tag_management)
  * [Define a tag](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_define_a_tag)
  * [List tags](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_list_tags)
  * [Drop a tag](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_drop_a_tag)
  * [Create a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph)
  * [Mark vertex types as taggable](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_mark_vertex_types_as_taggable)
  * [Create a Tag-Based Graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph_2)
  * [How To Tag Vertices](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_how_to_tag_vertices)
  * [Add tags on existing data](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_add_tags_on_existing_data)
  * [Set tags explicitly with TAGS clause](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_explicitly_with_tags_clause)
  * [Set tags implicitly by inserting into a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_implicitly_by_inserting_into_a_tag_based_graph)
  * [Query a Tag-based Graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_query_a_tag_based_graph)
  * [Access Control](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_access_control)
  * [Sample Use Cases](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_sample_use_cases)


Tag-based Vertex-Access Access Control is deprecated as of October 2023. TigerGraph will be introducing a more flexible scheme in an upcoming release.   
---  
Vertex-level Access Control (VLAC) allows database administrators to control data access on the vertex level by attaching tags to individual vertices on a graph (the base graph) and creating _tag-based graphs_. Tag-based graphs share the underlying data with the base graph but have their own sets of roles and privileges, which allows administrators to exercise fine-grained data access control without the vertex type boundary.
Figure 1 below illustrates two tag-based graphs built upon a base graph. The base graph contains vertices of `person` type, and vertices of `post` type. Two tags (A and B) are used to tag them. For example, vertex 1 and vertex 9 both have tag A. Vertex 3 and vertex 11 both have tag A and B. A tag-based graph named `tagA` will only present to its users those base graph vertices that have tag A (the bottom-left graph). The other tag-based graph named `tagB` will only present to its users those base graph vertices that have tag B (the bottom-right graph).
![Diagram explaining the composition of a base graph and a tag-based graph. The tag-based graphs reference the vertices in the base graph.](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/_images/vlac-graphs-figure.png)
Figure 1. Tag-based graphs as subgraphs of a base graph
For users operating on a tag-based graph, tags are an invisible aspect that silently filters how they load and query data. A tag-based graph defines its view, and all data outside its view is invisible to it.
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_prerequisites)Prerequisites
Sufficient privileges on the base graph or on the global scope are required to perform the steps described on this page.
  * `ACCESS_TAG`
    * Any operation involving tags
  * `WRITE_SCHEMA`
    * Create/run schema change jobs
    * Create tag-based graphs
  * `READ_DATA, WRITE_DATA`
    * Run queries that modify the graph
  * `WRITE_LOADINGJOB`, `EXECUTE_LOADINGJOB`
    * Create/run loading jobs


## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_workflow_using_vertex_level_access_control)Workflow - Using Vertex Level Access Control
Below is the basic workflow on using the VLAC to control data access for a database administrator:
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_1_create_a_tag_based_graph)**1. Create a tag-based graph**
  1. [Define a tag](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_define_a_tag).
  2. [Mark vertex types as taggable](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_mark_vertex_types_as_taggable).
  3. [Create a Tag-Based Graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph_2).


### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_2_manage_users_of_the_tag_based_graph)**2. Manage users of the tag-based graph**
  * Grant built-in roles to users on a tag-based graph
  * Define roles and grant them to users on a tag-based graph


### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_3_load_and_tag_data)**3. Load and tag data**
There are three main options for tagging vertices.
  1. [Add tags on existing data](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_add_tags_on_existing_data): A user with the privilege `ACCESS_TAG` and `WRITE_DATA` privileges on the base graph can create and run a DML query that sets tags on selected individual vertices.
  2. [Set tags explicitly with `TAGS` clause](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_explicitly_with_tags_clause): A user with `EXECUTE_LOADINGJOB` , `WRITE_LOADINGJOB` and `ACCESS_TAG` privileges on the base graph can create and run a loading job that explicitly sets tags on the newly loaded base graph vertices.
  3. [**Set tags implicitly by inserting into a tag-based graph**](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_implicitly_by_inserting_into_a_tag_based_graph): A user with tag-based graph loading or insert privilege (e.g., a `designer` or `querywriter`) can create an ordinary loading or upsert job which inserts new vertices. The new vertices will be automatically tagged according to the tag-based graph’s schema definition.


### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_4_query_and_update_data)**4. Query and update Data**
Users with data read and write privileges (e.g., the `querywriter` and `queryreader` built-in roles) can query and update the tag-based graph as they would do any other graph. The data filtering for querying or data tagging for insertion is applied automatically.
The rest of this tutorial will first describe tag management: creating and dropping tags, making vertex type taggable, and using tags to define tag-based graphs. Next, the three ways to tag vertices are described and illustrated. We summarize the privilege scheme of tag-based graphs in terms of GSQL’s predefined roles. Finally, we give some use cases that can be solved by VLAC.
Features not yet supported:
  * DDL tag operations can only be done in GSQL. They are not yet supported in GraphStudio. This includes create/drop tags, create/alter vertices that are taggable, define a tag-based graph.
  * The privilege control for DDL operations (only admin and designer users should be able to explicitly manage tags) is not fully functional.

In summary, all necessary operations to set up VLAC graphs and users are supported in GSQL. Due to a known bug, standard users (with `querywriter` and `queryreader` roles) can run some DDL operations which they should not be able to.  
---  
We’ll use the graph [socialNet](https://docs.tigergraph.com/gsql-ref/4.2/appendix/example-graphs#_social_net) as an example in the following sections.
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_tag_management)Tag Management
A tag is a special attribute of a vertex, which appears as a string for input and output purposes. If a vertex type is declared to be _*taggable*_ , then each vertex of that type can have one or more tags. The maximum number of different tags in a global graph is 64. All operations involving tags requires the user to have the `ACCESS_TAG` privilege.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_define_a_tag)Define a tag
A tag name has to be defined via `ADD TAG` before it can be used. Each base graph defines its own set of tags. However, there is a global maximum number of different tags, currently set at 64.
Syntax for ADD TAG
```
ADD TAG <tag_name> [DESCRIPTION <tag_description>]
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

`ADD TAG` can only be used inside a `SCHEMA_CHANGE JOB`. An example is below:
```
USE GRAPH socialNet
CREATE SCHEMA_CHANGE JOB add_tags {
 ADD TAG public DESCRIPTION "Open for public";
 ADD TAG tech DESCRIPTION "All about technology";
 ADD TAG vip DESCRIPTION "Very Important Person";
 ADD TAG dummy DESCRIPTION "Yeah, just a dummy";
}
RUN SCHEMA_CHANGE JOB add_tags
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_list_tags)List tags
Run `ls` to see a list of defined tags:
```
...
Tags:
- TAG public DESCRIPTION "Open for public"
- TAG tech DESCRIPTION "All about technology"
- TAG vip DESCRIPTION "Very Important Person"
- TAG dummy DESCRIPTION "Yeah, just a dummy"
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_drop_a_tag)Drop a tag
The `DROP TAG` command not only removes the given tag(s) from the catalog of available tags, but also deletes them from each vertex to which it is attached. You can drop multiple tags in one statement.
Syntax for DROP TAG
```
DROP TAG <tag_name> ["," <tag_name>]*
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Like `ADD TAG`, `DROP TAG` also needs to be inside a `SCHEMA_CHANGE JOB`:
```
USE GRAPH socialNet
CREATE SCHEMA_CHANGE JOB drop_dummy_tag {
 DROP TAG dummy;
}
RUN SCHEMA_CHANGE JOB drop_dummy_tag
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  1. You cannot drop a tag if it is used in the definition of a tag-based graph. You must drop the graph first.
  2. When `DROP TAG` is executed, the specified tags will be made invalid, and then the foreground process will complete. A background process will continue to run to remove the tags from all data. In the meantime, each dropped tag still takes up one of the 64 slots for tags. The slot(s) will become available once the background process finishes.

  
---  
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph)Create a tag-based graph
A tag-based graph is a filtered view of a base graph, where a base graph is a simple collection of vertex types and edge types, without any tag specifiers. A tag-based graph must include at least one _*taggable vertex type*_ from the base graph.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_mark_vertex_types_as_taggable)Mark vertex types as taggable
A vertex type has to be _*taggable*_ to accept tags. `TAGGABLE` is a boolean property of a vertex type that can be set with `CREATE VERTEX` initially or with `ALTER VERTEX` in a schema change job:
```
USE GRAPH socialNet
# in general, this would be a local schema change job, but in socialNet, the
# vertex types are global, so this needs to be a global schema change job
CREATE GLOBAL SCHEMA_CHANGE JOB make_taggable {
 ALTER VERTEX person WITH TAGGABLE="true";
 ALTER VERTEX post WITH TAGGABLE="true";
}
RUN GLOBAL SCHEMA_CHANGE JOB make_taggable
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

The property TAGGABLE is false by default. To change this default, use the `WITH` clause below when creating a vertex type:
```
CREATE VERTEX v2(PRIMARY_ID id UINT, name STRING) WITH TAGGABLE="true"
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  1. To change a vertex type from taggable to untaggable, use `WITH TAGGABLE="false".`
  2. You cannot make a vertex type untaggable if it is used in the definition of a tag-based graph.
  3. Edge types are never tagged. See the next section to see how we determine which edges to include in the tag-based graph.

  
---  
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph_2)Create a Tag-Based Graph
After a tag set and taggable vertex types have been created, we can use the tags to define a tag-based graph. For each vertex type we want to include, we may also specify a tag expression which must be satisfied for an individual vertex to be included.
**Examples**
Here is an example of creating a tag-based graph from the base graph `socialNet`.
```
USE GRAPH socialNet
CREATE GRAPH vipNet AS socialNet(person:vip, post, friend, posted, liked)
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

The interpretation is "Starting from the `socialNet` graph, create a tag-based graph called `vipNet` which includes `person` vertices which are tagged '`vip`'. Also include all `post` vertices and all `friend`, `posted` and `liked` edges."
Edges do not have tag expressions. An edge will be included when both of its vertex endpoints are included (and its edge type is included in the tag graph schema).
To describe a combination of tags, use the `&` operator to combine the tags:
```
USE GRAPH socialNet
CREATE GRAPH mixedNet AS socialNet(person:public&vip, post:public&tech&dummy, friend, posted, liked)
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

The graph `mixedNet` will only include the `person` vertices having both the `public` and `vip`tags, and posts having all three of the `public` , `tech` and `dummy` tags.
**Same tag for all vertex types**
If the desired tag-based graph is "anything in the base graph that has these tags", there is a convenient shortcut:
```
USE GRAPH socialNet
CREATE GRAPH publicNet2 AS socialNet:public
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

is the same as
```
USE GRAPH socialNet
CREATE GRAPH publicNet1 AS socialNet(person:public, post:public, friend, posted, liked)
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

**General Syntax**
The formal syntax for both the general form and the simplified form of creating a tag-based graph is shown below:
Syntax for CREATE GRAPH for a tag-based graph
```
<create_tag_graph> :=
  CREATE GRAPH <tag_graph_name> AS <base_graph_name>
  ( "(" <tagged_element_name> ("," <tagged_element_name>)* ")" | ":" <tag_expr> )
<tagged_element_name> := <tagged_vertex_name> | <edge_name>
<tagged_vertex_name> := <vertex_name> [":" <tag_expr>]
<tag_expr> := <tag> ("&" <tag_expr>)*
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_how_to_tag_vertices)How To Tag Vertices
There are three main options for tagging vertices in the base graph.
  * **Add tags on existing data with DML queries.** For existing data, a user with base graph tagging privilege (e.g., an `admin` or `designer`) can create and run a DML query that sets tags on selected individual vertices.
  * **Explicitly set tags when loading/inserting to a base graph**. For new data, a user with base graph loading and tagging privilege (e.g., an `admin` or `designer`) can create and run a loading job that explicitly sets tags on the newly loaded vertices.
  * **Implicitly set tags when loading/inserting into a tag-based graph**. For new data, a user with tag-based graph loading or insert privilege (e.g., a `designer` or `querywriter`) can create an ordinary Loading or Upsert Job which inserts new vertices. The new vertices will be automatically tagged according to the tag-based graph’s schema definition.


### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_add_tags_on_existing_data)Add tags on existing data
In GSQL, special vertex methods are provided to access and modify the tags of a vertex in a DML query (full list available on page [Vertex Functions](https://docs.tigergraph.com/gsql-ref/4.2/querying/func/vertex-methods)). These functions are only available for vertex aliases (defined in the `FROM` clause of a `SELECT` statement); they cannot be applied to vertex variables in other contexts.
There are [8 DML-level tag-access functions](https://docs.tigergraph.com/gsql-ref/4.2/querying/func/vertex-methods) in the vertex-query block or edge-query block. Use the [addTags()](https://docs.tigergraph.com/gsql-ref/4.2/querying/func/vertex-methods#_addtags) function to tag a vertex.
#### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_required_privilege)Required privilege
`READ_DATA`, `WRITE_DATA`, `WRITE_QUERY` , `ACCESS_TAG`
To add or modify tags, you should work at the base graph level.  
---  
**Examples**
`addTags()` is shown below. This query will add tags to person vertices to achieve the same effect as a base graph loading job example in the previous section.
```
CREATE QUERY addTagsToPerson() {
 Seed = { any };
 # person1 ~ person5 will be tagged as public.
 vSet = SELECT s
     FROM Seed:s
     WHERE s.id IN ("person1","person2","person3","person4","person5")
     ACCUM s.addTags("public");
 # person6 and person7 will be tagged as public and vip.
 vSet = SELECT s
     FROM Seed:s
     WHERE s.id IN ("person6","person7")
     ACCUM s.addTags("vip", "public");
 # person8 will be tagged as vip
 vSet = SELECT s
     FROM Seed:s
     WHERE s.id == "person8"
     ACCUM s.addTags("vip");
}
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Use [gsql-ref:querying:func/vertex-methods.adoc#_removetags](https://docs.tigergraph.com/gsql-ref/4.2/querying/func/vertex-methods#_removetags) and [gsql-ref:querying:func/vertex-methods.adoc#_removealltags](https://docs.tigergraph.com/gsql-ref/4.2/querying/func/vertex-methods#_removealltags) to remove tags from vertices:
```
// remove tag “vip” and “public” from all person vertices.
CREATE QUERY removetagsFromPerson() {
 vSet = { person.* };
 # remove tag vip and public from all person vertices
 vSet = SELECT s
     FROM vSet:s
     ACCUM s.removeTags("vip", "public");
}
// remove all tags from all person vertices.
CREATE QUERY removealltagsFromPerson() {
 vSet = { person.* };
 # remove all tags from all person vertices
 vSet = SELECT s
     FROM vSet:s
     ACCUM s.removeAllTags();
}
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_explicitly_with_tags_clause)Set tags explicitly with `TAGS` clause
Tags can be added to vertices at their loading time using a base graph loading job.
The `LOAD` statement has an optional clause for explicit tagging of loaded data. The tagging clause has two keywords, `TAGS` and `BY:`
  * `TAGS(<tag_list>)` specifies the tags to be set.
  * `BY` specifies how to merge tags if the targeted vertex exists in the graph
    * `BY OR:`Add the given tags to the existing set of tags.
    * `BY OVERWRITE:` Replace the existing tags with the given ones.


#### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_required_privilege_2)Required privilege
`WRITE_LOADINGJOB` , `EXECUTE_LOADINGJOB`, `ACCESS_TAG`
**Example 1**
Suppose we want to put the tags `vip` and `public` on the `person` vertex data coming from a certain file. We have three files: `persons1`, `persons2`, `persons3`.
```
$ cat persons1
person1,Male
person2,Female
person3,Male
person4,Female
person5,Female
$ cat persons2
person6,Male
person7,Male
$ cat persons3
id,gender,label
person8,Male,vip
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Create and run three loading jobs:
```
USE GRAPH socialNet
# person1 - person5 will be tagged as public.
CREATE LOADING JOB loadPersonPublic {
 DEFINE filename f;
 LOAD f TO VERTEX person VALUES($0, $0, $1) TAGS("public") BY OR;
}
RUN LOADING JOB loadPersonPublic USING f="./persons1"
# person6 and person7 will be tagged as public and vip.
CREATE LOADING JOB loadPersonPublicVip {
 DEFINE filename f;
 LOAD f TO VERTEX person VALUES($0, $0, $1) TAGS("public", "vip") BY OR;
}
RUN LOADING JOB loadPersonPublicVip USING f="./persons2"
# person8 will be tagged as vip which is derived from the file.
CREATE LOADING JOB loadPerson {
 DEFINE filename f;
 LOAD f TO VERTEX person VALUES($0, $0, $1) TAGS($2) BY OR USING HEADER="true";
}
RUN LOADING JOB loadPerson USING f="./persons3"
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

Note that the `TAGS` clause can specify a tag with a string literal (`"vip"`) so every vertex gets the same tag, or with a token reference by position (`$2`) or by name (`$"label"`) from the source file, so each vertex gets a data-dependent tag. If the tag clause refers to a non-existent tag, the loading job will still run, but the data will not be loaded at runtime. The loading job log will report these non-loaded vertices.
**Example 2**
We have three post files: `posts1`, `posts2`, and `posts3`.
```
$ cat posts1
3,cats,2011-02-05 01:02:44
8,cats,2011-02-03 17:05:52
9,cats,2011-02-05 23:12:42
10,cats,2011-02-04 03:02:31
11,cats,2011-02-03 01:02:21
$ cat posts2
4,coffee,2011-02-07 05:02:51
$ cat posts3
0,Graphs,2010-01-12 11:22:05
1,tigergraph,2011-03-03 23:02:00
2,query languages,2011-02-03 01:02:42
5,tigergraph,2011-02-06 01:02:02
6,tigergraph,2011-02-05 02:02:05
7,Graphs,2011-02-04 17:02:41
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

We create and run the following loading jobs:
```
USE GRAPH socialNet
# posts 3, 8, 9, 10, and 11 will be tagged as public.
CREATE LOADING JOB loadPostPublic {
 DEFINE filename f;
 LOAD f TO VERTEX post VALUES($0, $1, $2) TAGS("public") BY OR ;
}
RUN LOADING JOB loadPostPublic USING f="./posts1"
# posts 0, 1, 2, 5, 6, and 7 will be tagged as both public and tech.
CREATE LOADING JOB loadPostPublicTech {
 DEFINE filename f;
 LOAD f TO VERTEX post VALUES($0, $1, $2) TAGS("public", "tech") BY OR;
}
RUN LOADING JOB loadPostPublicTech USING f="./posts3"
# post 4 will remain untagged.
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_implicitly_by_inserting_into_a_tag_based_graph)**Set tags implicitly by inserting into a tag-based graph**
Loading data to a tag-based graph automatically tags each vertex with the tags specified in the graph’s definition. For example, when loading to `vipNet`, the `person` vertices will automatically be tagged with `vip`.
If you load data into a tag-based graph, these vertices are actually being added to the parent base graph. If two tag-based graphs have overlapping views (e.g. if the graph `vipNet2` also includes `person:vip`), then when one adds a vertex via the tag-based graph, the other tag-based graph may also see it.
```
USE GRAPH vipNet
CREATE LOADING JOB loadMember {
 DEFINE filename f;
 // TAGS("vip") BY OR will be applied implicitly
 // since vipNet is defined based on person:vip
 LOAD f TO VERTEX person VALUES($0, $0, $1);
}
RUN LOADING JOB loadMember USING f="./persons3"
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

  * **Portability and Reusability** : The same loading job works for `socialNet` or any graph derived from `socialNet` which contains `person`. The difference is in the effect: running it with `vipNet` will apply the `vip` tag. Running it with a different tag-based graph would apply different tags. _Users of a given tag-based graph automatically insert and query data for that tag-based graph._
  * **Tagging Shared Data** : The default behavior of GSQL loading is upsert: if you attempt to **insert** a vertex or edge which already exists (e.g., uses an existing ID), you will instead **update** the existing element with the new attribute values. If the attribute is a list or set, the new values will be added to the existing list/set. This applies to tags. If you attempt to load an existing vertex, the new tag(s) will be added to any existing tags. _Loading a vertex that already exists extends the tag set with the guidance of the tag-graph schema._

  
---  
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_query_a_tag_based_graph)Query a Tag-based Graph
The graph `vipNet` only includes vertices with the tag `vip`. We can verify this by running a simple query to return all person vertices in `vipNet`:
```
USE GRAPH vipNet
CREATE QUERY findAll() {
 seed = {person.*};
 result =
  SELECT v
  FROM seed:v
  ORDER BY v.id;
 PRINT result;
}
INSTALL QUERY findAll
RUN QUERY findAll()
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

The output of the query would be:
```
{
 "error": false,
 "message": "",
 "version": {
  "schema": 2,
  "edition": "enterprise",
  "api": "v2"
 },
 "results": [{"res": [
  {
   "v_id": "person6",
   "attributes": {
    "gender": "Male",
    "id": "person6"
   },
   "v_type": "person"
  },
  {
   "v_id": "person7",
   "attributes": {
    "gender": "Male",
    "id": "person7"
   },
   "v_type": "person"
  },
  {
   "v_id": "person8",
   "attributes": {
    "gender": "Male",
    "id": "person8"
   },
   "v_type": "person"
  }
 ]}]
}
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_access_control)Access Control
Users with global `WRITE_SCHEMA` and `ACCESS_TAG` privileges can create, modify and drop tags, as well as create tag-based graphs for all graphs.
#### On the base graph
Users with roles on the base graph that have the `ACCESS_TAG` privilege (e.g.`admin` and `designer` roles) can create/drop tags, and tag vertices. Users that have both the `ACCESS_TAG` privilege and `WRITE_SCHEMA` privilege (e.g. `admin` and `designer` roles) can create/drop tag-based graphs of the base graph.
Users with roles that don’t have the `ACCESS_TAG` privilege on the base graph are able to access the base graph as their roles allow, but they do not have access to the tags on the base graph. They cannot see whether any vertex type on the graph is taggable or if there are tag-based graphs of the base graph.
Users with roles on the tag-based graphs of the base graph cannot access the base graph if they don’t have a role with privileges for the base graph.
#### On tag-based graphs
When a new tag-based graph is created, users with `admin` or `designer` roles will inherit their base graph role on the tag-based graph. Additionally, the creator of the tag-based graph becomes an admin of the tag-based graph.
Users who are given roles on a tag-based graph have the privileges on the tag-based graph that correspond to their roles, except they are not allowed to edit the tag-based graph’s graph schema.
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_sample_use_cases)Sample Use Cases
#### **Scenario I**
**Problem**
A user with `admin` role on a graph wants to grant a group of users access to a selective set of vertices.
**Solution**
The base graph admin can do the following security setup.
  1. **Define a tag**. In a schema change job, [Define a tag](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_define_a_tag) `T` for this application.
  2. **Mark vertex types as taggable**. Identify the vertex types you want to give selective access for, and [mark those vertex types as taggable](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_mark_vertex_types_as_taggable) in a schema change job.
  3. **Define a tag-based graph**. [Define a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph) `B` with the taggable vertex types, with `T` as their tag expression.
  4. **Tag vertices**. Write a DML query on the base graph and use the tag functions in the query to [tag the vertices](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_add_tags_on_existing_data) you want to include in the tag-based graph, and run the query.
  5. **Grant users permission to the tag-based graph**. On the tag-based graph B, grant roles that have the appropriate privileges for graph `B` to the target users.


#### **Scenario II**
**Problem**
You have a source file containing class annotations (tags) on vertex data. You want to grant users access to the vertices that have the annotation `T1`. In the future, you also want the ability to give other users access to vertices based on the vertex class.
**Solution**
The base graph `admin` user can do the following setup.
  1. **Define tags**. [Declare tags](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_define_a_tag) `T1, T2, … Tn` for all the classes in your source file in a schema change job.
  2. **Mark vertex types as taggable**. Identify the vertex types of the vertices in your source file that have class annotations, and [mark those vertex types as taggable](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_mark_vertex_types_as_taggable) in a schema change job.
  3. **Define a tag-based graph**. [Define a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph) `B` with `T1` as the tag expression.
  4. **Explicitly tag vertices during data loading**. Write a base graph loading job, and in the loading job, use a `TAGS() BY` clause to [explicitly add tags](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_set_tags_explicitly_with_tags_clause) to the ingested vertices.
  5. **Grant roles on the tag-based graph**. On the tag-based graph `B`, grant roles that have the appropriate privileges for the graph `B` to target users.


#### **Scenario III**
**Problem**
An `admin` user on a graph wants to give a group of users read/write access for a specific class of vertices. The users would be able to insert new vertices into the graph and query the data, and all the data they insert into the graph are tagged as the same class.
**Solution**
The base graph admin can do the following setup.
  * **Define a tag**. [Declare a tag](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_define_a_tag) `T` for this application in a schema change job.
  * **Mark vertex types as taggable**. Identify the vertex types to give selective access to, and [mark the relevant vertex types as taggable](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_mark_vertex_types_as_taggable) in a schema change job.
  * **Define a tag-based graph**. [Define a tag-based graph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac#_create_a_tag_based_graph) `B` with `T` as the tag expression.
  * **Grant roles on the tag-based graph**. On the tag-based graph, grant roles with the appropriate privileges to target users.


These group users operate (including delete/update/insert) on graph `B` as if it is a normal graph. They can ingest new data, as well as operate on those vertices from the base graph that have the tag `T`.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


